# openai-client

./: .gitignore  Cargo.toml  README.md  rustc-ice-2026-04-15T13_19_47-42692.txt
.direnv/: flake-profile-1-link  flake-profile-2-link
src/: lib.rs  main.rs  prelude.rs  tools.rs
tests/: complex_tools.rs
