[package]
name = "openai-client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

tokio = { version = "1.50.0", features = ["full", "time"], optional = true }
futures-timer = { version = "3", optional = true }
schemars = "1.2.1"
reqwest-sse = "0.1.0"
async-trait = "0.1.89"

[features]
default = ["tokio_runtime"]

tokio_runtime = ["tokio"]
runtime_agnostic = ["futures-timer"]
futures-timer = ["dep:futures-timer"]
tokio = ["dep:tokio"]
